--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,8 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-# 添加对 .ui 文件的处理
-set(UI_FILES
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/widget.ui
-)
+# Set the search path for AUTOUIC
+set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/ui)
 
 catkin_package(
   CATKIN_DEPENDS roscpp sensor_msgs std_msgs
@@ -38,13 +36,18 @@ include_directories(
 
 add_definitions(${Qt5Core_DEFINITIONS} ${Qt5Gui_DEFINITIONS} ${Qt5Widgets_DEFINITIONS} ${PCL_DEFINITIONS})
 
-qt5_wrap_ui(UIC_HEADERS ${UI_FILES})  # 处理 .ui 文件
+set(UI_FILES
+  ${CMAKE_CURRENT_SOURCE_DIR}/ui/widget.ui
+)
+
+qt5_wrap_ui(UIC_HEADERS ${UI_FILES}) 
 
 add_executable(${PROJECT_NAME}_node
-  src/main.cpp
-  src/widget.cpp
-  src/pointcloudpublisher.cpp
-  src/dataset/kitti_dataset.cpp
+  src/main.cc
+  src/widget.cc
+  src/pointcloudpublisher.cc
+  src/dataset/kitti_dataset.cc
+  src/dataset/nclt_dataset.cc
   ${UIC_HEADERS}
 )
 
@@ -55,7 +58,3 @@ target_link_libraries(${PROJECT_NAME}_node
   Qt5::Widgets
   ${PCL_LIBRARIES}
 )
-
-# install(TARGETS ${PROJECT_NAME}_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
